fix media query, toggle menu is not showing on some media queries

--- a/assets/scss/blocks.scss
+++ b/assets/scss/blocks.scss
@@ -288,9 +288,6 @@ figcaption strong {
   }
 }
 
-// hide slider on mobile
-@media (max-width: 629px) {
-}
 
 .fl-vertical-space {
   padding: 3em 0;
