--- a/assets/scss/theme.style.scss
+++ b/assets/scss/theme.style.scss
@@ -336,7 +336,7 @@ a:active {
   max-height: 85vh;
 }
 
-@media screen and (min-width: 37.5em) {
+@media screen and (min-width: 40em) {
   .menu-toggle {
     display: none;
   }
